[gd_scene load_steps=14 format=2]

[ext_resource path="res://Voxels.gd" type="Script" id=1]
[ext_resource path="res://art/brickwall.png" type="Texture" id=2]
[ext_resource path="res://art/sandbrick.png" type="Texture" id=3]
[ext_resource path="res://art/sfdsfgrtj.png" type="Texture" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://art/grid.png" type="Texture" id=6]

[sub_resource type="Environment" id=3]
background_mode = 1
background_color = Color( 0.486275, 0.654902, 0.835294, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.1
ambient_light_sky_contribution = 0.0

[sub_resource type="SpatialMaterial" id=13]
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=14]
albedo_texture = ExtResource( 3 )

[sub_resource type="ArrayMesh" id=15]
surfaces/0 = {
"aabb": AABB( -1.5, -0.5, -1.5, 3.00001, 1, 3 ),
"array_data": PoolByteArray( 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 0, 191, 255, 127, 0, 0, 252, 51, 253, 59, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 0, 63, 255, 127, 0, 0, 88, 49, 253, 59, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 0, 191, 255, 127, 0, 0, 252, 51, 2, 58, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 0, 191, 255, 127, 0, 0, 252, 51, 2, 58, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 0, 63, 255, 127, 0, 0, 88, 49, 253, 59, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 0, 63, 255, 127, 0, 0, 88, 49, 2, 58, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 0, 63, 255, 127, 0, 0, 81, 49, 253, 59, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 192, 63, 255, 127, 0, 0, 92, 45, 253, 59, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 0, 63, 255, 127, 0, 0, 81, 49, 2, 58, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 0, 63, 255, 127, 0, 0, 81, 49, 2, 58, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 192, 63, 255, 127, 0, 0, 92, 45, 253, 59, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 192, 63, 255, 127, 0, 0, 92, 45, 2, 58, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 0, 0, 83, 53, 253, 59, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 0, 0, 1, 52, 253, 59, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 0, 0, 83, 53, 2, 58, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 0, 0, 83, 53, 2, 58, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 0, 0, 1, 52, 253, 59, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 0, 0, 1, 52, 2, 58, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 0, 0, 252, 51, 253, 59, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 0, 0, 88, 49, 253, 59, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 0, 0, 252, 51, 2, 58, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 0, 0, 252, 51, 2, 58, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 0, 0, 88, 49, 253, 59, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 0, 0, 88, 49, 2, 58, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 0, 63, 1, 128, 0, 0, 252, 51, 253, 59, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 0, 191, 1, 128, 0, 0, 88, 49, 253, 59, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 0, 63, 1, 128, 0, 0, 252, 51, 2, 58, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 0, 63, 1, 128, 0, 0, 252, 51, 2, 58, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 0, 191, 1, 128, 0, 0, 88, 49, 253, 59, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 0, 191, 1, 128, 0, 0, 88, 49, 2, 58, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 0, 191, 1, 128, 0, 0, 81, 49, 253, 59, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 192, 191, 1, 128, 0, 0, 92, 45, 253, 59, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 0, 191, 1, 128, 0, 0, 81, 49, 2, 58, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 0, 191, 1, 128, 0, 0, 81, 49, 2, 58, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 192, 191, 1, 128, 0, 0, 92, 45, 253, 59, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 192, 191, 1, 128, 0, 0, 92, 45, 2, 58, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 192, 191, 255, 127, 255, 127, 83, 53, 253, 59, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 192, 191, 255, 127, 255, 127, 1, 52, 253, 59, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 192, 191, 255, 127, 255, 127, 83, 53, 2, 58, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 192, 191, 255, 127, 255, 127, 83, 53, 2, 58, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 192, 191, 255, 127, 255, 127, 1, 52, 253, 59, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 192, 191, 255, 127, 255, 127, 1, 52, 2, 58, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 192, 191, 255, 127, 255, 127, 252, 51, 253, 59, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 192, 191, 255, 127, 255, 127, 88, 49, 253, 59, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 192, 191, 255, 127, 255, 127, 252, 51, 2, 58, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 192, 191, 255, 127, 255, 127, 252, 51, 2, 58, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 192, 191, 255, 127, 255, 127, 88, 49, 253, 59, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 192, 191, 255, 127, 255, 127, 88, 49, 2, 58, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 192, 63, 1, 128, 0, 0, 83, 53, 253, 59, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 0, 63, 1, 128, 0, 0, 1, 52, 253, 59, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 192, 63, 1, 128, 0, 0, 83, 53, 2, 58, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 192, 63, 1, 128, 0, 0, 83, 53, 2, 58, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 0, 63, 1, 128, 0, 0, 1, 52, 253, 59, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 0, 63, 1, 128, 0, 0, 1, 52, 2, 58, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 0, 0, 81, 49, 253, 59, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 0, 0, 92, 45, 253, 59, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 0, 0, 81, 49, 2, 58, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 0, 0, 81, 49, 2, 58, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 0, 0, 92, 45, 253, 59, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 0, 0, 92, 45, 2, 58, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 192, 191, 255, 127, 0, 0, 83, 53, 253, 59, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 0, 191, 255, 127, 0, 0, 1, 52, 253, 59, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 192, 191, 255, 127, 0, 0, 83, 53, 2, 58, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 192, 191, 255, 127, 0, 0, 83, 53, 2, 58, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 0, 191, 255, 127, 0, 0, 1, 52, 253, 59, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 0, 191, 255, 127, 0, 0, 1, 52, 2, 58, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 192, 191, 255, 127, 255, 127, 81, 49, 253, 59, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 192, 191, 255, 127, 255, 127, 92, 45, 253, 59, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 192, 191, 255, 127, 255, 127, 81, 49, 2, 58, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 192, 191, 255, 127, 255, 127, 81, 49, 2, 58, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 192, 191, 255, 127, 255, 127, 92, 45, 253, 59, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 192, 191, 255, 127, 255, 127, 92, 45, 2, 58 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 2194451,
"index_count": 0,
"material": SubResource( 13 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 72
}
surfaces/1 = {
"aabb": AABB( -1.5, -0.5, -1.5, 3, 1.00001, 3 ),
"array_data": PoolByteArray( 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 169, 58, 253, 57, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 0, 58, 253, 57, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 169, 58, 2, 56, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 169, 58, 2, 56, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 0, 58, 253, 57, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 0, 58, 2, 56, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 169, 58, 253, 57, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 0, 58, 253, 57, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 169, 58, 2, 56, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 169, 58, 2, 56, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 0, 58, 253, 57, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 0, 58, 2, 56, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 255, 59, 253, 57, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 86, 59, 253, 57, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 255, 59, 2, 56, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 255, 59, 2, 56, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 86, 59, 253, 57, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 86, 59, 2, 56, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 255, 57, 250, 55, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 86, 57, 250, 55, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 255, 57, 5, 52, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 255, 57, 5, 52, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 86, 57, 250, 55, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 86, 57, 5, 52, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 255, 127, 255, 59, 253, 59, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 255, 127, 86, 59, 253, 59, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 255, 59, 2, 58, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 255, 59, 2, 58, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 255, 127, 86, 59, 253, 59, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 86, 59, 2, 58, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 1, 128, 255, 57, 253, 59, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 1, 128, 86, 57, 253, 59, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 255, 57, 2, 58, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 255, 57, 2, 58, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 1, 128, 86, 57, 253, 59, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 86, 57, 2, 58, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 255, 127, 169, 58, 253, 59, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 255, 127, 0, 58, 253, 59, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 169, 58, 2, 58, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 169, 58, 2, 58, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 255, 127, 0, 58, 253, 59, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 0, 58, 2, 58, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 1, 128, 169, 58, 253, 59, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 1, 128, 0, 58, 253, 59, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 169, 58, 2, 58, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 169, 58, 2, 58, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 1, 128, 0, 58, 253, 59, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 0, 58, 2, 58, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 255, 57, 250, 55, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 86, 57, 250, 55, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 255, 57, 5, 52, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 255, 57, 5, 52, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 86, 57, 250, 55, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 86, 57, 5, 52, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 255, 59, 253, 57, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 86, 59, 253, 57, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 255, 59, 2, 56, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 255, 59, 2, 56, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 86, 59, 253, 57, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 86, 59, 2, 56, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 255, 57, 245, 51, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 86, 57, 245, 51, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 192, 191, 0, 0, 255, 127, 255, 57, 30, 21, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 192, 191, 0, 0, 255, 127, 255, 57, 30, 21, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 86, 57, 245, 51, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 192, 191, 0, 0, 255, 127, 86, 57, 30, 21, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 255, 59, 245, 51, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 86, 59, 245, 51, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 192, 191, 0, 0, 1, 128, 255, 59, 30, 21, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 192, 191, 0, 0, 1, 128, 255, 59, 30, 21, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 86, 59, 245, 51, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 192, 191, 0, 0, 1, 128, 86, 59, 30, 21, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 84, 59, 245, 51, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 171, 58, 245, 51, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 192, 191, 0, 0, 255, 127, 84, 59, 30, 21, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 192, 191, 0, 0, 255, 127, 84, 59, 30, 21, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 171, 58, 245, 51, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 192, 191, 0, 0, 255, 127, 171, 58, 30, 21, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 84, 59, 245, 51, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 171, 58, 245, 51, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 192, 191, 0, 0, 1, 128, 84, 59, 30, 21, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 192, 191, 0, 0, 1, 128, 84, 59, 30, 21, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 171, 58, 245, 51, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 192, 191, 0, 0, 1, 128, 171, 58, 30, 21, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 255, 127, 255, 57, 253, 59, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 255, 127, 86, 57, 253, 59, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 255, 57, 2, 58, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 255, 57, 2, 58, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 192, 63, 0, 0, 255, 127, 86, 57, 253, 59, 0, 0, 192, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 86, 57, 2, 58, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 1, 128, 255, 59, 253, 59, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 1, 128, 86, 59, 253, 59, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 255, 59, 2, 58, 0, 0, 192, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 255, 59, 2, 58, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 192, 63, 0, 0, 1, 128, 86, 59, 253, 59, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 1, 128, 86, 59, 2, 58, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 255, 59, 245, 51, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 86, 59, 245, 51, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 192, 191, 0, 0, 255, 127, 255, 59, 30, 21, 0, 0, 192, 63, 0, 0, 0, 63, 0, 0, 192, 191, 0, 0, 255, 127, 255, 59, 30, 21, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 86, 59, 245, 51, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 192, 191, 0, 0, 255, 127, 86, 59, 30, 21, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 255, 57, 245, 51, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 86, 57, 245, 51, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 192, 191, 0, 0, 1, 128, 255, 57, 30, 21, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 192, 191, 0, 0, 1, 128, 255, 57, 30, 21, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 1, 128, 86, 57, 245, 51, 0, 0, 192, 63, 0, 0, 0, 191, 0, 0, 192, 191, 0, 0, 1, 128, 86, 57, 30, 21 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 2194451,
"index_count": 0,
"material": SubResource( 14 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 108
}

[sub_resource type="SpatialMaterial" id=11]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_diffuse_mode = 2
params_billboard_mode = 2
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 4 )

[sub_resource type="GDScript" id=12]
script/source = "extends Sprite3D


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    pass # Replace with function body.

func do_cast(offset : Vector3 = Vector3()):
    var light : DirectionalLight = get_parent().get_node(\"DirectionalLight\")
    var cast : RayCast = RayCast.new()
    add_child(cast)
    cast.global_transform.origin = global_transform.origin + offset
    cast.cast_to = light.global_transform.origin - cast.global_transform.origin
    cast.cast_to = cast.cast_to.normalized()
    cast.cast_to *= light.directional_shadow_max_distance
    cast.force_raycast_update()
    var raw_collision_point = null
    var collision_point = null
    var collision_normal = null
    cast.queue_free()
    return cast.is_colliding()


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
    var offsets = [Vector3(), Vector3(0, -0.25, 0), Vector3(0, 0.5, 0)]
    var amount = 0.0
    for offset in offsets:
        if do_cast(offset):
            amount += 1.0/offsets.size()
    var target_color = Color(1.00, 1.00, 1.00).linear_interpolate(Color(0.25, 0.25, 0.25), amount)
    modulate = modulate.linear_interpolate(target_color, 1.0 - pow(0.001, delta))
    
    pass
"

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.168627, 0.47451, 1, 0.321569 )

[node name="World" type="Spatial" groups=["VoxEditor"]]
script = ExtResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="." groups=["Sun"]]
transform = Transform( 0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, -5, 8, 5 )
shadow_enabled = true
shadow_bias = 0.0
shadow_reverse_cull_face = true
directional_shadow_normal_bias = 0.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="CameraHolder" type="Spatial" parent="."]
transform = Transform( 0.707107, -0.353553, 0.612372, 0, 0.866025, 0.5, -0.707107, -0.353553, 0.612372, 0, 1, 0 )

[node name="Camera" type="Camera" parent="CameraHolder"]
transform = Transform( 1, 0, 0, 0, 1, -8.34465e-07, 0, 8.04663e-07, 1, 0, 0, 10 )
projection = 1
fov = 45.0
size = 10.0

[node name="Voxels" type="MeshInstance" parent="."]
mesh = SubResource( 15 )
material/0 = null
material/1 = null
script = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="Voxels"]

[node name="CollisionShape" type="CollisionShape" parent="Voxels/StaticBody"]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
material_override = SubResource( 11 )
generate_lightmap = false
offset = Vector2( 0, 8 )
pixel_size = 0.0625
billboard = 2
shaded = true
double_sided = false
alpha_cut = 1
texture = ExtResource( 4 )
script = SubResource( 12 )

[node name="ButtonGrid" type="OptionButton" parent="."]
margin_top = 149.0
margin_right = 168.0
margin_bottom = 186.0

[node name="ButtonWarp" type="OptionButton" parent="."]
margin_top = 112.0
margin_right = 168.0
margin_bottom = 149.0

[node name="ButtonTool" type="OptionButton" parent="."]
margin_top = 74.0
margin_right = 168.0
margin_bottom = 111.0

[node name="ButtonMode" type="OptionButton" parent="."]
margin_top = 37.0
margin_right = 168.0
margin_bottom = 74.0

[node name="ButtonPerspective" type="OptionButton" parent="."]
margin_right = 168.0
margin_bottom = 37.0
text = "Camera"

[node name="CursorBox" type="CSGBox" parent="."]
visible = false
width = 1.1
height = 1.1
depth = 1.1
material = SubResource( 7 )

[node name="Mats" type="ScrollContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0

[node name="List" type="HBoxContainer" parent="Mats"]
margin_right = 1024.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Grid" type="Sprite3D" parent="."]
visible = false
cast_shadow = 0
pixel_size = 0.0625
texture = ExtResource( 6 )
